# duckdb-ml

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  Makefile  README.md  extension_config.cmake
.github/agents/: ml-test-parity.agent.md
.github/prompts/: validate-ml-api-contract.prompt.md
.github/skills/integrate-model-type/: SKILL.md
.github/workflows/: MainDistributionPipeline.yml
docs/: UPDATING.md
scripts/: append_metadata.cmake  compute-extension-hash.sh  extension-upload.sh  run_sql_tests.py  setup-duckdb.sh  setup-prebuilt-deps.sh
src/: ml_extension.cpp
src/algorithms/: boosted_tree_regressor.cpp  pca.cpp
src/functions/: ml_evaluate.cpp  ml_explain.cpp  ml_fit.cpp  ml_models.cpp  ml_predict.cpp
src/include/: ml_extension.hpp
src/include/ml/: boosted_tree_regressor.hpp  model_registry.hpp  pca.hpp  register.hpp
src/storage/: model_registry.cpp
test/: README.md  datasets.duckdb
test/python/: boosted_tree_regressor.py  ml_fit.py  model_registry.py  pca.py
test/sql/: boosted_tree_regressor.test  ml.test  pca.test
